--- a/templates/login.hbs
+++ b/templates/login.hbs
@@ -43,8 +43,8 @@
 		<form method="post" action="/login">
 			<input type="hidden" name="redirect" value="{{redirect}}" />
 			<input type="hidden" name="host" value="{{host}}" />
-			<input type="text" name="user" placeholder="User" /><br />
-			<input type="password" name="pass" placeholder="Passphrase" /><br />
+			<input type="text" name="user" placeholder="User" tabindex="1" autofocus /><br />
+			<input type="password" name="pass" placeholder="Passphrase" tabindex="2" /><br />
 			<button type="submit">Login</button>
 		</form>
 	</section>
