Simplfy login error handling and educe neccessary login fields

--- a/templates/login.hbs
+++ b/templates/login.hbs
@@ -41,8 +41,7 @@
 			<p><strong>Error:</strong> {{error}}</p>
 		{{/if}}
 		<form method="post" action="/login">
-			<input type="hidden" name="redirect" value="{{redirect}}" />
-			<input type="hidden" name="host" value="{{host}}" />
+			<input type="hidden" name="url" value="{{url}}" />
 			<input type="text" name="user" placeholder="User" tabindex="1" autofocus /><br />
 			<input type="password" name="pass" placeholder="Passphrase" tabindex="2" /><br />
 			<button type="submit">Login</button>
